# tonal-transfer

./: .gitignore  .train.py.swp  README.md  __main__.py  align.py  cluster.py  cluster_tones.py  contour_plotting.py  feature_cluster_combo.py  feature_extract.py  feature_extract_tgt.py  jobscript.sh  main.py  model_prep.py  pyproject.toml  requirements-freeze.txt  requirements.txt  run_Aprabet.py  train.py  tsv_generator.py
arpabet_dicts/: lmk200705_001_bad_words.txt
models/: requirements.txt  train.py
output/: train_segments.jsonl  vocab.json
tsv_transcripts/: lmk200705_001.tsv  lmk20080222_001.tsv  lmk200805_001.tsv  lmk200805_002.tsv  lmk20090113_001.tsv  lmk2009_002.tsv  lmk2009_004.tsv  lmk2009_006.tsv
~/output/: vocab.json
